# arc_pi_taxonomy

./: .gitignore  Arcanum PI Taxonomy.xmind  CLAUDE.md  LICENSE.md  README.md  ai_enabled_app_defense_checklist.md  ai_sec_questionnaire.md  ai_threat_model_questions.md  in_md.md  llmtest_db.json  probes.md  pyproject.toml
attack_evasions/: Phoenetic_Substitution.md  fictional_language.md
attack_intents/: api_enumeration.md  business_integrity.md  get_prompt_secret  system_prompt_leak.md  tool_enumeration.md
attack_intents/business_integrity/: confidential_info.md
attack_intents/business_integrity/policy_overriding/: account_access.md  discounts.md  returns_refunds.md
attack_techniques/: act_as_interpreter.md  end_sequences.md
docs/: app.js  index.html  styles.css
docs/data/: taxonomy.js
ecosystem/: README.MD
src/llmtest/: __init__.py  async_evaluation.py  async_llm_client.py  async_payloads.py  curl_parser.py  evaluation.py  execution.py  llm_client.py  main.py  model.py  parsing.py  payloads.py  taxonomy.py
tests/: test_async_modules.py  test_chatbot_server.py  test_fuzz_curl_parser.py  test_model.py  test_parsing.py
