[tool.poetry]
name = "llmtest"
version = "0.1.0"
description = "A slim LLM inference testing tool for prompt injection."
authors = ["Jules"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
requests = "^2.31.0"
pydantic = "^2.4.2"
uncurl = "^0.0.11"
rich = "^13.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.scripts]
llmtest = "llmtest.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
